--- a/package.json
+++ b/package.json
@@ -2,11 +2,22 @@
   "name": "yuki-bot",
   "version": "0.0.1",
   "description": "yt bot",
-  "main": "index.js",
+  "main": "src/index.tsx",
   "repository": "https://github.com/pinkilo/yuki-bot.git",
   "author": "Pinkilo <hello@pinkilo.org>",
   "license": "MIT",
+  "scripts": {
+    "test": "node src/index.tsx",
+    "format": "yarn prettier --write"
+  },
   "dependencies": {
-    "express": "^4.18.2"
+    "eslint": "^8.36.0",
+    "express": "^4.18.2",
+    "typescript": "^5.0.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "prettier": "^2.8.7"
   }
 }
