--- a/package.json
+++ b/package.json
@@ -8,16 +8,35 @@
   "license": "MIT",
   "scripts": {
     "test": "node src/index.tsx",
-    "format": "yarn prettier --write"
+    "format": "yarn prettier --write",
+    "build": "parcel build"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "express": "^4.18.2",
+    "googleapis": "^110.0.0",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "prettier": "^2.8.7"
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^5.5.0",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.1.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "parcel": "^2.8.3",
+    "path-browserify": "^1.0.0",
+    "prettier": "^2.8.7",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.1.0",
+    "url": "^0.11.0",
+    "util": "^0.12.3"
   }
 }
