--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "yuki-bot",
   "version": "0.0.1",
   "description": "yt bot",
-  "main": "src/index.tsx",
   "repository": "https://github.com/pinkilo/yuki-bot.git",
   "author": "Pinkilo <hello@pinkilo.org>",
   "license": "MIT",
   "scripts": {
     "test": "node src/index.tsx",
     "format": "yarn prettier --write",
-    "build": "parcel build"
+    "compile": "tsc --build",
+    "build": "rollup --config",
+    "watch": "rollup --config --watch"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
@@ -19,6 +20,11 @@
     "typescript": "^5.0.2"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.0.0",
+    "rollup": "^3.20.2",
+    "rollup-plugin-add-shebang": "^0.3.1",
+    "rollup-plugin-watch": "^1.0.2",
+    "@rollup/plugin-json": "^4.1.0",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
@@ -33,10 +39,15 @@
     "path-browserify": "^1.0.0",
     "prettier": "^2.8.7",
     "process": "^0.11.10",
+    "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.1.0",
     "url": "^0.11.0",
     "util": "^0.12.3"
+  },
+  "main": "./src/index.js",
+  "bin": {
+    "yuki": "yuki.js"
   }
 }
