--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
     "typescript": "^5.0.2"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^11.0.0",
-    "rollup": "^3.20.2",
-    "rollup-plugin-add-shebang": "^0.3.1",
-    "rollup-plugin-watch": "^1.0.2",
     "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/express": "^4.17.17",
+    "@types/gapi": "^0.0.44",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "assert": "^2.0.0",
@@ -41,6 +39,9 @@
     "process": "^0.11.10",
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
+    "rollup": "^3.20.2",
+    "rollup-plugin-add-shebang": "^0.3.1",
+    "rollup-plugin-watch": "^1.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.1.0",
     "url": "^0.11.0",
