--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "test": "node src/index.tsx",
     "format": "yarn prettier --write",
     "compile": "tsc --build",
-    "build": "rollup --config",
-    "watch": "rollup --config --watch"
+    "rollup/build": "rollup --config",
+    "rollup/watch": "rollup --config --watch",
+    "watch": "nodemon yuki.js"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
@@ -32,6 +33,7 @@
     "crypto-browserify": "^3.12.0",
     "events": "^3.1.0",
     "https-browserify": "^1.0.0",
+    "nodemon": "^2.0.22",
     "os-browserify": "^0.3.0",
     "parcel": "^2.8.3",
     "path-browserify": "^1.0.0",
