--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint": "^8.36.0",
     "express": "^4.18.2",
     "googleapis": "^110.0.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
@@ -43,6 +44,7 @@
     "querystring-es3": "^0.2.1",
     "rollup": "^3.20.2",
     "rollup-plugin-add-shebang": "^0.3.1",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-watch": "^1.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.1.0",
