--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Pinkilo <hello@pinkilo.org>",
   "license": "MIT",
   "scripts": {
-    "test": "node src/index.tsx",
+    "test": "jest",
     "format": "yarn prettier --write",
     "compile": "tsc --build",
     "rollup/build": "rollup --config",
@@ -22,6 +22,9 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/express": "^4.17.17",
@@ -29,11 +32,13 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "assert": "^2.0.0",
+    "babel-jest": "^29.5.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^5.5.0",
     "crypto-browserify": "^3.12.0",
     "events": "^3.1.0",
     "https-browserify": "^1.0.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "os-browserify": "^0.3.0",
     "parcel": "^2.8.3",
