--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "googleapis": "^110.0.0",
     "typescript": "^5.0.2",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
@@ -29,6 +30,7 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/express": "^4.17.17",
     "@types/gapi": "^0.0.44",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "assert": "^2.0.0",
