--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
     "baseUrl": ".",
     "outDir": "./dist",
     "rootDir": "./src",
-    "noImplicitReturns": true,
+    //"noImplicitReturns": true,
     "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "incremental": true /* Enable incremental compilation */,
-    "target": "es5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
+    "incremental": true ,
+    "target": "esnext" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
     "module": "esnext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
     "declaration": true /* Generates corresponding '.d.ts' file. */,
     "sourceMap": false /* Generates corresponding '.map' file. */,
@@ -17,9 +17,9 @@
     /* Strict Type-Checking Options */
     // "strict": true /* Enable all strict type-checking options. */,
     "resolveJsonModule": true,
-    "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-    "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+    "moduleResolution": "node",
+    "esModuleInterop": true
   },
-  "include": ["src", "src/**/*.json"],
+  "include": ["src"],
   "exclude": ["./dist", "./node_modules"]
 }
