--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/express": "^4.17.17",
     "@types/gapi": "^0.0.44",
+    "@types/jest": "^29.5.0",
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
@@ -51,6 +52,8 @@
     "rollup-plugin-watch": "^1.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.1.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "url": "^0.11.0",
     "util": "^0.12.3"
