--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,19 +7,32 @@
     "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "incremental": true ,
-    "target": "esnext" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
-    "module": "esnext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-    "declaration": true /* Generates corresponding '.d.ts' file. */,
-    "sourceMap": false /* Generates corresponding '.map' file. */,
+    "incremental": true,
+    "target": "esnext"
+    /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */,
+    "module": "esnext"
+    /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
+    "declaration": true
+    /* Generates corresponding '.d.ts' file. */,
+    "sourceMap": false
+    /* Generates corresponding '.map' file. */,
     //"importHelpers": true /* Import emit helpers from 'tslib'. */,
-    "lib": ["ES5", "ES6"],
+    "lib": [
+      "ES5",
+      "ES6"
+    ],
     /* Strict Type-Checking Options */
     // "strict": true /* Enable all strict type-checking options. */,
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "esModuleInterop": true
   },
-  "include": ["src"],
-  "exclude": ["./dist", "./node_modules"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "./dist",
+    "./node_modules",
+    "src/__tests__"
+  ]
 }
