--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.17",
     "@types/gapi": "^0.0.44",
     "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
