--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf build node_modules coverage tsconfig.tsbuildinfo yarn.lock dist",
+    "prepare": "husky install",
     "test": "jest",
     "format": "yarn prettier --config .prettierrc.yaml --write  public src",
     "compile": "tsc --build --config tsconfig.build.json",
     "build": "rollup --config",
     "rollup/watch": "rollup --config --watch",
     "watch": "nodemon yuki.js --config nodemon.config.json"
+  },
+  "main": "./src/index.js",
+  "bin": {
+    "yuki": "yuki.js"
+  },
+  "lint-staged": {
+    "*": "prettier --config .prettierrc.yaml --write  public src"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
@@ -40,7 +48,9 @@
     "crypto-browserify": "^3.12.0",
     "events": "^3.1.0",
     "https-browserify": "^1.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "lint-staged": "^13.2.2",
     "nodemon": "^2.0.22",
     "os-browserify": "^0.3.0",
     "parcel": "^2.8.3",
@@ -60,9 +70,5 @@
     "tslib": "^2.5.0",
     "url": "^0.11.0",
     "util": "^0.12.3"
-  },
-  "main": "./src/index.js",
-  "bin": {
-    "yuki": "yuki.js"
   }
 }
