--- a/.github/workflows/format-ci.yml
+++ b/.github/workflows/format-ci.yml
@@ -3,6 +3,8 @@ on: pull_request
 
 jobs:
   format:
+    permissions:
+      contents: write
     # Check if the PR is not from a fork
     if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
@@ -25,11 +27,7 @@ jobs:
       - name: Check for modified files
         id: git-check
         run: echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
-      - name: Push changes
-        if: steps.git-check.outputs.modified == 'true'
-        run: |
-          git config --global user.name 'JonoAugustine'
-          git config --global user.email 'me@jonoaugustine.com'
-          git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}
-          git commit -am "Automated changes"
-          git push
+      - name: Git Auto Commit
+        uses: stefanzweifel/git-auto-commit-action@v4.16.0
+        with:
+          commit_message: automated formatting
