--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -28,4 +28,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - run: yarn rollup/build
-      - run: yarn test --maxWorkers "50%"
+      - run: yarn test --maxWorkers 1
