--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -17,7 +17,7 @@ jobs:
         uses: mskelton/setup-yarn@v1.4.0
         with:
           node-version: 18.x
-      - run: yarn rollup/build
+      - run: yarn compile
   test:
     runs-on: ubuntu-latest
     needs: build
