new: nunjucks to render dashboard for login
new: allow yukibot to work with login and without tokenLoader
new: add prebuild check to YukiBuilder.ts
fix: add checks for Yuki#tokenLoader
fix: yuki polling loops
fix: CommandBuilder#build ratelimit nullability issue
build: change target module to commonJS
docs: expand sample implementation
docs: remove old doc files and README entries

--- a/sample/package.json
+++ b/sample/package.json
@@ -8,6 +8,7 @@
   },
   "type": "module",
   "dependencies": {
-    "yukibot": "file:../"
+    "dotenv": "^16.0.3",
+    "yukibot": "link:../"
   }
 }
