--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "./public"
   ],
   "scripts": {
-    "clean": "rm -rf build node_modules coverage tsconfig.tsbuildinfo yarn.lock dist",
+    "clean": "rm -rf node_modules coverage *.tsbuildinfo yarn.lock dist",
     "prepare": "husky install",
-    "prettier/format": "yarn prettier --config .prettierrc.yaml --write public src sample *.js *.ts",
-    "prettier/check": "prettier --config .prettierrc.yaml --check public src sample *.js *.ts",
-    "compile": "tsc -p tsconfig.build.json",
+    "prettier/format": "yarn prettier --config .prettierrc.yaml --write src sample *.js *.ts",
+    "prettier/check": "prettier --config .prettierrc.yaml --check src sample *.js *.ts",
+    "compile": "tsc -p tsconfig.build.json && cp -r src/views dist",
     "test": "jest",
-    "prepublish": "yarn compile",
+    "prepublishOnly": "yarn compile",
     "semantic-release": "semantic-release"
   },
   "release": {
@@ -48,6 +48,7 @@
     "express": "^4.18.2",
     "googleapis": "^110.0.0",
     "nanoid": "^3.3.6",
+    "nunjucks": "^3.2.4",
     "packetier": "^3.0.0",
     "typescript": "^5.0.2",
     "winston": "^3.8.2"
@@ -58,6 +59,7 @@
     "@types/gapi": "^0.0.44",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/nunjucks": "^3.2.2",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "assert": "^2.0.0",
