tests: add relevent old commands tests
build: run build and test workflow on all branches but main

--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
             {
               "tag": "Refactor",
               "release": "patch"
+            },
+            {
+              "tag": "tests",
+              "release": "patch"
             }
           ]
         }
