refactor: redesign Eventbus listeners to allow for listeners to "self-destruct"
new: add attempt function which acts as functional try-catch block
tests: add tests for Eventbus and new attempt function
build: separate compile command into compile and build
docs: add example onMessage listeners and more comments to sample

--- a/.github/workflows/CI-TEST.yml
+++ b/.github/workflows/CI-TEST.yml
@@ -19,7 +19,7 @@ jobs:
         uses: mskelton/setup-yarn@v1.4.0
         with:
           node-version: 18.x
-      - run: yarn compile
+      - run: yarn build
   test:
     runs-on: ubuntu-latest
     needs: build
