--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/nunjucks": "^3.2.2",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "assert": "^2.0.0",
@@ -86,6 +87,7 @@
     "semantic-release": "^21.0.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.1.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
