--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@pinkilo/yukibot",
-  "version": "0.1.0-development",
+  "version": "0.1.0",
   "description": "YouTube broadcast bot library",
-  "repository": "https://github.com/pinkilo/yuki-bot.git",
+  "repository": "https://github.com/pinkilo/yukibotJS.git",
   "author": "Pinkilo <hello@pinkilo.org>",
   "license": "MIT",
   "main": "./dist/index.js",
