--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^5.5.0",
+    "conventional-changelog-eslint": "^3.0.9",
     "crypto-browserify": "^3.12.0",
     "eslint": "^8.36.0",
     "events": "^3.1.0",
