--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,10 +7,7 @@
     "incremental": true,
     "declaration": true,
     "sourceMap": false,
-    "lib": [
-      "ES5",
-      "ES6"
-    ],
+    "lib": ["ES5", "ES6"],
     "target": "ES6",
     "module": "commonJS",
     "resolveJsonModule": true,
@@ -21,12 +18,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "./dist",
-    "./node_modules",
-    "src/__tests__"
-  ]
+  "include": ["src"],
+  "exclude": ["./dist", "./node_modules", "src/__tests__"]
 }
