--- a/samples/sample-ts/package.json
+++ b/samples/sample-ts/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "typescript": "^5.0.4",
-    "yukibot": "link:../"
+    "@pinkilo/yukibot": "link:../../"
   },
   "devDependencies": {
     "ts-node": "^10.9.1"
