--- a/samples/sample-ts/tsconfig.json
+++ b/samples/sample-ts/tsconfig.json
@@ -1,18 +1,19 @@
 {
-  "extends": "../tsconfig.build.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "rootDir": "./src",
     "declaration": true,
     "sourceMap": false,
-    "lib": [
-      "ES5",
-      "ES6"
-    ],
+    "lib": ["ES5", "ES6"],
     "target": "ES6",
     "module": "commonJS",
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "noUnusedParameters": false,
-    "noUnusedLocals": false
-  }
+    "noUnusedLocals": false,
+    "noImplicitAny": false
+  },
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
