feat: allow user-defined additional home page routes
- update readme and ts sample
- improve yarn scripts for build and watch

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "prettier/format": "prettier --config .prettierrc.yaml -w src samples *.yaml *.json",
     "prettier/check": "prettier --config .prettierrc.yaml -c src samples *.yaml *.json",
     "compile": "tsc -p tsconfig.build.json",
-    "build": "yarn compile && cp -r src/views dist",
+    "build/views": "cp -r src/views dist",
+    "build": "yarn compile && yarn build/views",
+    "watch/views": "nodemon --watch src -e njk,css --exec yarn build/views",
+    "watch/ts": "tsc -p tsconfig.build.json --watch",
+    "watch": "yarn watch/ts & yarn watch/views",
     "test": "jest",
     "prepublishOnly": "yarn build",
     "semantic-release": "semantic-release"
@@ -51,6 +55,7 @@
     "https-browserify": "^1.0.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "os-browserify": "^0.3.0",
     "parcel": "^2.8.3",
     "path-browserify": "^1.0.0",
