--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -2,6 +2,9 @@ branches: [main]
 plugins:
   - - "@semantic-release/commit-analyzer"
     - preset: conventionalcommits
-  - "@semantic-release/release-notes-generator"
-  - "@semantic-release/changelog"
+  - - "@semantic-release/release-notes-generator"
+    - preset: conventionalcommits
+  - - "@semantic-release/changelog"
+    - changelogFile: "CHANGELOG.md"
   - "@semantic-release/npm"
+  - "@semantic-release/github"
