build: eslint ignore tests, test-tsconfig sourcemap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "target": "esnext",
     "module": "esnext",
     "declaration": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "lib": ["ES5", "ES6"],
     "resolveJsonModule": true,
     "moduleResolution": "node",
